tests/invalid/Function_Invalid_11.whiley
type fun is function(int)->(int)

function foo():
    fun f = &(int x, int y -> y)

